--- a/full-stack.html
+++ b/full-stack.html
@@ -38,12 +38,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432163-full-stack-software-engineer'>Bey Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/vonage/jobs/4258912002'>Job Application for Software Engineer III - Full Stack Developer at Vonage</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AmpleInsightInc/743999692429275-backend-fullstack-engineer-remote-'>Ample Insight Inc. Backend/Fullstack Engineer (remote) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
@@ -62,11 +66,11 @@
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ppro/ca74033e-f4fc-4fb8-9e20-a36d43e22b5e'>PPRO - Fullstack Software Engineer - APM Integrations (Node.js/TypeScript)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ppro/ca74033e-f4fc-4fb8-9e20-a36d43e22b5e'>PPRO - Fullstack Software Engineer - APM Integrations (Node.js/TypeScript)</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/343ea35f-66e8-46c8-8834-963223dccc58'>Datacom - Full Stack Java Developer - Auckland</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/343ea35f-66e8-46c8-8834-963223dccc58'>Datacom - Full Stack Java Developer - Auckland</a></h5> 
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/udemy/602998df-b175-4117-bb6e-f6067cc256d0'>Udemy - Software Engineer - Full Stack, Udemy for Business</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/udemy/602998df-b175-4117-bb6e-f6067cc256d0'>Udemy - Software Engineer - Full Stack, Udemy for Business</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NexGenTechnologiesInc/743999692055129-java-developer-full-stack-pt-remote'>NexGen Technologies, Inc. Java Developer - Full Stack -  PT - Remote | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NexGenTechnologiesInc/743999692055129-java-developer-full-stack-pt-remote'>NexGen Technologies, Inc. Java Developer - Full Stack -  PT - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HEALTHENGINE1/743999692292537-senior-full-stack-engineer'>HealthEngine Senior Full Stack Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HEALTHENGINE1/743999692292537-senior-full-stack-engineer'>HealthEngine Senior Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -156,7 +160,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -217,7 +221,7 @@ Member Companies.</p>
 <p>Jul 19, 2019 ... Apply online for the job of Senior Full-Stack Python Django Developer at The 
 Idea People.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ids-agency.workable.com/j/C57D7FDC50?viewed=true'>IDS Agency - Jobs: Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://ids-agency.workable.com/j/C57D7FDC50?viewed=true'>IDS Agency - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17 Jul 2019 ... Apply online for the job of Full Stack Developer at IDS Agency.</p>
 <hr/>
@@ -261,7 +265,7 @@ Idea People.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/lewispr/job/oLvEafwO'>LEWIS Careers - Full Stack Wordpress Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/lewispr/job/oLvEafwO'>LEWIS Careers - Full Stack Wordpress Developer</a></h5> 
 <p><span class="badge badge-light">San Francisco San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -269,7 +273,7 @@ Idea People.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://linways.freshteam.com/jobs/AZ8boWbnR68v/software-development-engineer-2-sde-2-full-stack'>Software Development Engineer-2 (SDE-2) [Full Stack]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linways.freshteam.com/jobs/AZ8boWbnR68v/software-development-engineer-2-sde-2-full-stack'>Software Development Engineer-2 (SDE-2) [Full Stack]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Software Development Engineer-2 (SDE-2) [Full Stack]. Kochi, Kerala | Full time. 
 Apply Now. What you will do: Be a part of our development team and actively?...</p>
@@ -306,7 +310,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/9BC21A23EC'>Alpha - Jobs: Senior Full-Stack Engineer - NYC or Remote (US ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/9BC21A23EC'>Alpha - Jobs: Senior Full-Stack Engineer - NYC or Remote (US ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... ... scaling our microservices to handling real- time video and using machine 
 learning and natural language processing to empower real world business 
@@ -322,7 +326,7 @@ intelligence?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692139754-senior-full-stack-engineer'>4Catalyzer Senior Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -361,7 +365,7 @@ Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
 Engineering; Employment Type: Experienced Professionals; Division: Pelion 
 Platform?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/letgo/jobs/1788032'>Job Application for Full Stack Engineer at letgo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/letgo/jobs/1788032'>Job Application for Full Stack Engineer at letgo</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -448,15 +452,11 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 Developer to support USAID's Office of Transition Initiatives (OTI). In this position
 ?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/scout24/jobs/1785556'>Job Application for Senior Fullstack Engineer - Scala - Private Seller (m/w/d) at Scout24</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/scout24/jobs/1785556'>Job Application for Senior Fullstack Engineer - Scala - Private Seller (m/w/d) at Scout24</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
